# jikan-web

./: .pre-commit-config.yaml  README.md  compose.yaml
.github/workflows/: ci.yaml
backend/: Dockerfile  pyproject.toml
backend/src/: main.py
frontend/: Dockerfile  biome.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vitest.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx
